--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "pino": "^6.5.0"
   },
   "devDependencies": {
     "grunt-apidoc": "^0.11.0",
