--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soulmolecule-backend",
+  "name": "btracker-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,6 +21,7 @@
     "mongoose": "^5.9.25",
     "nodemon": "^2.0.4",
     "pino": "^6.5.0"
+    
   },
   "devDependencies": {
     "grunt-apidoc": "^0.11.0",
