--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "nodemon": "^2.0.4",
     "pino": "^6.5.0"
-    
   },
   "devDependencies": {
     "grunt-apidoc": "^0.11.0",
