--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "pino": "^6.5.0"
   },
