--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "env-cmd -f ./app/config/dev.env node --inspect index.js",
     "start": "node index.js",
     "dev": "env-cmd -f ./app/config/dev.env node index.js"
   },
