--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "pino": "^6.5.0"
   },
